welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: not found: value rien
	}else{droite();avance();gauche();return rien;}}}
                                                ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (!vuBiscuit()){
^